minor scss correction to feed page actions on mobile

--- a/src/components/feed/feed.scss
+++ b/src/components/feed/feed.scss
@@ -58,6 +58,7 @@
   }
   .page-actions {
     .kdog-submit-button {
+      width: 8rem;
       font-size: 0.9rem;
       text-align: center;
       padding: 0.6rem 0 0.6rem 0;
